plugins {
    id 'java'
    id 'application' 
}

group = 'com.app'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.app.Main'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}//enable preview features for virtual threads

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

test {
    useJUnitPlatform()
    jvmArgs += '--enable-preview'
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}